# Mack

./: CMakeLists.txt  CMakePresets.json  README.md
GLAD/src/: glad.c
components/: BoxColliderComponent.hpp  BoxMeshComponent.hpp  BushModelComponent.hpp  CrosshairMeshComponent.hpp  FireflyModelComponent.hpp  FlashlightModelComponent.hpp  GrassMeshComponent.hpp  GravityComponent.h  HeightfieldColliderComponent.hpp  KnockBackComponent.hpp  MaterialComponent.hpp  ModelMeshComponent.hpp  MushroomModelComponent.hpp  OutlineComponent.hpp  RigidBodyComponent.h  RockModelComponent.hpp  StaticColliderComponent.hpp  TransformComponent.hpp  TreeModelComponent.hpp  TrunkModelComponent.hpp
headers/: Camera.hpp  EntityManager.hpp  Framebuffer.hpp  Game.hpp  Model.hpp  ModelMesh.hpp  SceneShaders.hpp  Shader.hpp  TextureUtils.hpp  Window.hpp
resources/shaders/: crosshairShader.fs  crosshairShader.vs  cubeShader.fs  cubeShader.vs  grassShader.fs  grassShader.vs  modelShader.fs  modelShader.vs  outlineShader.fs  outlineShader.vs  postProcessingShader.fs  postProcessingShader.vs  skyboxShader.fs  skyboxShader.vs  (+2 more)
src/: Camera.cpp  EntityManager.cpp  Framebuffer.cpp  Game.cpp  Model.cpp  ModelMesh.cpp  Shader.cpp  TextureUtils.cpp  Window.cpp  glad.c  main.cpp
systems/: CollisionSystem.hpp  CollisonSystem.cpp  FireflySystem.cpp  FireflySystem.h  KnockBackSystem.cpp  KnockBackSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.h  RayCastSystem.cpp  RayCastSystem.hpp  RenderSystem.cpp  RenderSystem.h  ShaderSystem.cpp  ShaderSystem.h  TerrainCollisionSystem.cpp  TerrainCollisionSystem.hpp
(+17 files in other folders)
